<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imvClose"
        android:layout_width="@dimen/dp45"
        android:layout_height="@dimen/dp45"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/add_new_task"
        android:src="@drawable/ic_close_gray_24dp" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edtTaskName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imvClose"
        android:layout_margin="@dimen/dp10"
        android:hint="@string/hint_task_name"
        app:met_baseColor="@android:color/black"
        app:met_floatingLabel="none"
        app:met_primaryColor="?colorAccent"
        app:met_singleLineEllipsis="true" />


    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edtTaskDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtTaskName"
        android:layout_margin="@dimen/dp10"
        android:hint="@string/hint_task_description"
        app:met_baseColor="@android:color/black"
        app:met_floatingLabel="none"
        app:met_primaryColor="?colorAccent"
        app:met_singleLineEllipsis="true" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnAddTask"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp60"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/dp5"
        android:text="@string/add_task"
        android:textAllCaps="false"
        app:backgroundTint="@color/com_fb_button_background_color"
        android:textColor="@android:color/white" />
</RelativeLayout>