<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    >
    <LinearLayout
        android:id="@+id/llTasks"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0"
        android:layout_marginBottom="@dimen/dp5"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:visibility="gone"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp60"
            android:background="@android:color/white"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="@dimen/dp5"
                android:layout_marginLeft="@dimen/dp10"
                android:text="@string/task"
                android:textSize="@dimen/sp30"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tvTaskLogs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="@dimen/dp10"
                android:layout_marginRight="@dimen/dp10"
                android:text="@string/task_logs"
                />

        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rcvTasks"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp0"
            android:layout_marginBottom="@dimen/dp5"
            android:layout_weight="1"
            android:background="@android:color/white"
            />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlEmptyTask"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0"
        android:layout_weight="1"
        android:background="@android:color/white"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/dp30"
            android:layout_marginRight="@dimen/dp30"
            android:text="@string/empty_task"
            android:textAlignment="center"
            android:textSize="@dimen/sp20"
            />
    </RelativeLayout>
    <Button
        android:id="@+id/btnAddNewTask"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp60"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/dp5"
        android:background="@drawable/selector_rectangle_blue_button"
        android:text="@string/add_new_task"
        android:textAllCaps="false"
        android:textColor="@color/color_connect_facebook"
        />
</LinearLayout>